# home_scraper

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  analyse.py  code_snippets.py  main.py  pyproject.toml
home_scrapper/: __init__.py
home_scrapper/results/: __init__.py  homes.py
home_scrapper/scrapers/: __init__.py  base.py  imot.py  scraper.py
home_scrapper/utils/: strings.py
scripts/: analyse_imot.py  scrape_imot.py
tests/: test_home_scrapper.py
