[tool.poetry]
name = "challenge"
version = "0.2.0"
description = "Coding challenge for a Junior Data Enginner position at McMakler"
authors = ["Ivan Lazarov <ivan.v.lazarov@googlemail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
bs4 = "^0.0.1"
requests = "^2.25.1"
pandas = "^1.2.4"
numpy = "^1.20.2"
scipy = "^1.6.3"
SQLAlchemy = "^1.4.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
